{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 6,
  "lineage": "5de1a69e-4cc0-5364-4845-f05f3643a3ac",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:638325785916:vpc/vpc-0ac1ff8ba92cbf0f4",
            "cidr_block": "10.20.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0acb7b6023b3f7f65",
                "cidr_block": "10.20.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-06dea2c3e507ef699",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ac1ff8ba92cbf0f4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0aa24b956a71317ff",
            "owner_id": "638325785916",
            "tags": {
              "Env": "dev",
              "Name": "tunefy-dev-vpc",
              "Project": "tunefy",
              "env": "dev",
              "owner": "david.cifuentes",
              "project": "tunefy-david.cifuentes"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "dev_to_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "rtb-00bf4419e9469d5d9",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.30.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00bf4419e9469d5d9805491791",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00bf4419e9469d5d9",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0b791f4f29afed679"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.dev_to_prod",
            "data.aws_route_tables.dev_private",
            "data.aws_vpc.dev"
          ]
        },
        {
          "index_key": "rtb-063ad1dd9eddfa45f",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.30.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-063ad1dd9eddfa45f805491791",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-063ad1dd9eddfa45f",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0b791f4f29afed679"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.dev_to_prod",
            "data.aws_route_tables.dev_private",
            "data.aws_vpc.dev"
          ]
        },
        {
          "index_key": "rtb-0eae95c2ec687d7c6",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.30.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0eae95c2ec687d7c6805491791",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eae95c2ec687d7c6",
            "state": "blackhole",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0b791f4f29afed679"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc_peering_connection.dev_to_prod",
            "data.aws_route_tables.dev_private",
            "data.aws_vpc.dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "octopus_allow_prod_tentacle",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.30.0.0/16"
            ],
            "description": "Allow Octopus Tentacle polling from Prod VPC",
            "from_port": 10943,
            "id": "sgrule-3626728986",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0df61e002efefe332",
            "security_group_rule_id": "sgr-052a616d40662f1b4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 10943,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "dev_to_prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "pending-acceptance",
            "id": "pcx-0b791f4f29afed679",
            "peer_owner_id": "038686090046",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-0976ad85d907cbb75",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tunefy-dev-to-prod-peering",
              "Project": "Tunefy",
              "Side": "Requester"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "tunefy-dev-to-prod-peering",
              "Project": "Tunefy",
              "Side": "Requester"
            },
            "vpc_id": "vpc-0ac1ff8ba92cbf0f4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.dev"
          ]
        }
      ]
    }
  ]
}